turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:53: error: type mismatch;
 found   : Array[Array[Int]]
 required: Array[Int]
  rule(0)(0) = new Array[Array[Int]](3)
               ^Turmite:54: error: type mismatch;
 found   : Array[Array[Int]]
 required: Array[Int]
  rule(0)(1) = new Array[Array[Int]](3)
               ^